--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="email_hint">Inserisci email</string>
     <string name="password_hint">Inserisci password</string>
     <string name="login_hint">LOGIN</string>
+    <string name="login_res_ok">Login successfull</string>
 </resources>
