--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,20 @@
     <string name="date">27/07/1997</string>
     <string name="address">Via Sandro Sandri 71 Roma</string>
     <string name="tel">3295632453</string>
+    <string name="mail">null</string>
+
     <string name="btn_read">Leggi</string>
     <string name="btn_go">Go</string>
     <string name="btn_call">Call</string>
+    <string name="btn_share">Share</string>
+    <string name="btn_info">Info</string>
 
     <string name="email_hint">Inserisci email</string>
     <string name="password_hint">Inserisci password</string>
     <string name="login_hint">LOGIN</string>
     <string name="login_res_ok">Login successfull</string>
     <string name="login_res_ko">Please fill form</string>
+
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
 </resources>
